swtiching to react-materialize, fixed number input bug

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ td {
     align-items: baseline;
 }
 
+p.range-field {
+    margin: 0;
+}
+
 
 /* Materialize styles for search box*/
     /* label color */
